--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -3,15 +3,17 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    font-size: 1.2rem;
+    gap: 1rem;
 
     .status {
       position: absolute;
-      left: 40px;
+      left: 35px;
       top: 5px;
       background: white;
       color: black;
       font-weight: light;
-      padding: 0.5rem;
+      padding: 0.3rem 0.5rem;
       border-radius: 3px;
     }
 
