--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,12 +1,16 @@
 .Cards {
   display: flex;
   flex-direction: row;
-  gap: 1.5rem;
+  justify-content: space-around;
+  gap: 2rem;
+  height: auto;
+  width: 100%;
 
   .card {
     display: flex;
     flex-direction: column;
     position: relative;
+    min-width: 170px;
     font-size: 1.2rem;
     gap: 1rem;
 
